enhancement: adding clustering and collecting violation line code string and violation node code string